Creating the basic showcase.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+	<title>Balázs Papp</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	
+	<main>
+		<section id="showcase">
+			<div id="me">
+				<h1>I am...</h1>
+				<h2>Balázs Papp</h2>
+				<h2>a <span>wannabe</span> cinematographer</h2>
+			</div>
+
+			<img id="portrait" src="images/pappbalazs.jpg">
+		</section>
+	</main>
 </body>
 </html>
