The instagram and twitter link was switched up :((

--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
 					</li>
 
 					<li class="footer__col__list-item">
-						<a class="footer__col__list-item__link" href="https://twitter.com/_pappbalazs">instagram</a>
+						<a class="footer__col__list-item__link" href="https://instagram.com/_pappbalazs">instagram</a>
 					</li>
 
 					<li class="footer__col__list-item">
-						<a class="footer__col__list-item__link" href="https://instagram.com/_pappbalazs/">twitter</a>
+						<a class="footer__col__list-item__link" href="https://twitter.com/_pappbalazs/">twitter</a>
 					</li>
 				</ul>
 			</div>
